added second class to class

--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,12 @@
   background-color: yellow;
 }
 
+.destroyer {
+  background-color: brown;
+}
+
 .destroyer-preview {
   width: 20px;
   height: 10px;
   margin: 3px;
-  
 }
