--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,17 @@
 .submarine {
   background-color: green;
 }
+.cruiser {
+  background-color: purple;
+}
+
+.battleship {
+  background-color: orange;
+}
+
+.carrier {
+  background-color: blue;
+}
 
 .destroyer-preview {
   width: 20px;
@@ -20,6 +31,24 @@
 
 .submarine-preview {
   width: 30px;
+  height: 10px;
+  margin: 3px;
+}
+
+.cruiser-preview {
+  width: 30px;
+  height: 10px;
+  margin: 3px;
+}
+
+.battleship-preview {
+  width: 40px;
+  height: 10px;
+  margin: 3px;
+}
+
+.carrier-preview {
+  width: 50px;
   height: 10px;
   margin: 3px;
 }
