--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 .option-container {
   width: 500px;
   height: 50px;
+  margin: 30px 0;
   background-color: yellow;
   display: flex;
   align-items: center;
