--- a/styles.css
+++ b/styles.css
@@ -4,14 +4,20 @@
   justify-content: space-between;
 }
 
+/* display flex and flex-wrap contains all the individual div cells created with loop
+   in createBoard. box-sizing is how we got the borders.  */
 .game-board {
   width: 200px;
   height: 200px;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .block {
   width: 20px;
   height: 20px;
+  border: solid 1px black;
+  box-sizing: border-box;
 }
 
 
