--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 
 
 
+
 .option-container {
   width: 500px;
   height: 60px;
@@ -78,4 +79,16 @@
   width: 50px;
   height: 10px;
   margin: 3px;
+}
+
+.hover {
+  background-color: gray;
+}
+
+.boom {
+  background-color: red;
+}
+
+.empty {
+  background-color: gray;
 }
